--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
           <!-- <scope>compile</scope>
           <optional>false</optional> -->
       </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+          <version>2.5</version>
+          <scope>provided</scope>
+      </dependency>
       <!-- Test -->
       <dependency>
           <groupId>junit</groupId>
